<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/titlebar_bg_nor" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weibo"
            android:textSize="18sp"
            android:textColor="@color/weibo"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minWidth="480dip"
            android:text="@string/tv_username"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_login"
            android:background="@drawable/btn_regist_bg"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/btn_register"
            android:background="@drawable/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>