<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 顶部标题 -->

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_bg_nor" >

        <Button
            android:id="@+id/btn_detail_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wb_detail"
            android:textColor="@color/rtwb_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_detail_title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/title_home_normal" />
    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/fl_title">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/iv_detail_portrait"
                        style="@style/small_portrait" />

                    <ImageView
                        android:id="@+id/iv_detail_portrait_round"
                        android:layout_width="45dip"
                        android:layout_height="45dip"
                        android:src="@drawable/portrait_round_nor" />

                    <ImageView
                        android:id="@+id/iv_detail_portrait_v_blue"
                        android:layout_width="50dip"
                        android:layout_height="50dip"
                        android:src="@drawable/portrait_v_blue"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_detail_portrait_v_red"
                        android:layout_width="50dip"
                        android:layout_height="50dip"
                        android:src="@drawable/portrait_v_red"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_detail_portrait_v_yellow"
                        android:layout_width="50dip"
                        android:layout_height="50dip"
                        android:src="@drawable/portrait_v_yellow"
                        android:visibility="gone" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_wb_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="sina"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/iv_wb_detail_crown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dip"
                    android:src="@drawable/crown" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/triangle" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/horizontal_separation_line" />
            <!-- 微博正文部分 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="13dip" >

                <TextView
                    android:id="@+id/tv_wb_detail_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="微博正文"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/iv_wb_detail_content_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/detail_pic_loading" 
                    android:visibility="gone"/>
            </LinearLayout>
            <!-- 微博转发部分 -->

            <LinearLayout
                android:id="@+id/retweeted_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dip"
                android:layout_marginRight="13dip"
                android:background="@drawable/popup"
                android:orientation="vertical"
                android:padding="13dip"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tv_wb_detail_subcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="微博转发内容"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_wb_detail_subcontent_subpic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/detail_pic_loading" 
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" >

                    <TextView
                        android:id="@+id/tv_rtwb_detail_redirect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/redirect_icon"
                        android:text="10"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_rtwb_detail_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:drawableLeft="@drawable/comment_icon"
                        android:text="10"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_rtwb_detail_attitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:drawableLeft="@drawable/attitude_like3"
                        android:text="10"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/tv_wb_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dip"
                    android:text="10-9 06:23"
                    android:textColor="@color/rtwb_text"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/wb_from"
                    android:textColor="@color/wb_from"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_wb_detail_from_where"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="新浪微博"
                    android:textColor="@color/wb_from"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/tv_wb_detail_redirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/redirect_icon"
                    android:text="10"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_wb_detail_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:drawableLeft="@drawable/comment_icon"
                    android:text="10"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_wb_detail_attitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:drawableLeft="@drawable/attitude_like3"
                    android:text="10"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/bottom_toolbar_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvReload"
            android:drawableTop="@drawable/toolbar_refresh_icon"
            android:text="@string/reload"
            style="@style/detail_btn_left" />

        <TextView
            android:drawableTop="@drawable/toolbar_comment_icon"
            android:id="@+id/tvComment"
            android:text="@string/comment"
            style="@style/detail_btn_middle" />

        <TextView
            android:id="@+id/tvRedirect"
            android:text="@string/forward"
            android:drawableTop="@drawable/toolbar_forward_icon"
            style="@style/detail_btn_middle" />

        <TextView
            android:id="@+id/tvFav"
            android:text="@string/favorite"
            android:drawableTop="@drawable/toolbar_fav_icon"
            style="@style/detail_btn_middle" />

        <TextView
            android:id="@+id/tvMore"
            android:text="@string/more"
            android:drawableTop="@drawable/toolbar_more_icon"
            style="@style/detail_btn_right" />
    </LinearLayout>

</RelativeLayout>